GNOME Bugzilla – Bug 687833
Missing pixel format definition for ARV_PIXEL_FORMAT_BAYER_GR_12_PACKED
Last modified: 2012-11-07 10:15:56 UTC
Using a Basler aca2000-50gc, which when using raw bayer encoded images at 12bpp packed, uses the format 0x010c002a which I guess should translate to ARV_PIXEL_FORMAT_BAYER_GR_12_PACKED. I'm unable to find the format anywhere in arvenums.h. The format does exist in the api from JAI and the Pylon from Basler.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thanks Morten.