pixel_format: add ARV_PIXEL_FORMAT_BAYER_GR_12_PACKED

Fix https://bugzilla.gnome.org/show_bug.cgi?id=687833 .